# wattson

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/wattson/: __init__.py  __main__.py  app.py  cli.py  history.py  live.py  watchdog.py
src/wattson/probes/: __init__.py  cpu.py  disk.py  gpu.py  hardware.py  memory.py  processes.py
tests/: test_controls.py  test_probes.py  test_watchdog.py
